# buzz-mcp

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  live-sandbox.yml
docs/specs/: 000-product-scope.md  001-auth-and-security.md  002-buzz-domain-model.md  003-tool-catalog.md  004-resource-uris.md  005-error-model.md  006-test-plan.md  007-release-and-registry.md  008-buzz-api-ontology.md  README.md
scripts/: check_live_buzz_env.py  mcp_inspector_smoke.py
src/buzz_submission_mcp/: __init__.py  buzz_client.py  docs_catalog.py  entities.py  items.py  manifest.py  reporting.py  schemas.py  server.py  service.py
tests/: test_buzz_client.py  test_docs_catalog.py  test_entities.py  test_items.py  test_live_buzz.py  test_live_buzz_env.py  test_manifest.py  test_mcp_inspector_smoke.py  test_packaging.py  test_reporting.py  test_server_contracts.py  test_service.py
